--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "@tauri-apps/api": "^1.1.0",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.1.0",
@@ -21,6 +27,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "tailwindcss": "^3.2.2",
     "typescript": "^4.6.4",
     "vite": "^3.0.2"
   }
